manifests/infra/custom/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
spec:
  gatewayClassName: gateway
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All

    - name: argo-https
      port: 443
      protocol: TLS
      hostname: argocd.example.com
      tls:
        mode: Passthrough
      allowedRoutes:
        namespaces:
          from: All

    - name: https
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: wildcard-cert-tls
            kind: Secret
            group: ''
      allowedRoutes:
        namespaces:
          from: All
