manifests/infra/custom/gateway/tls-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tls-redirect
spec:
  parentRefs:
    - name: gateway
      group: gateway.networking.k8s.io
      kind: Gateway
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 302
      matches:
        - path:
            type: PathPrefix
            value: /
